@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -nombre: String
  -correo: String
  -direccion: String
  --
  +Cliente(nombre: String, correo: String, direccion: String)
  +toString(): String
}

class Pedido {
  -cliente: Cliente
  -productos: List<Producto>
  -numeroPedido: int
  -{static} contadorPedidos: int = 1
  --
  +Pedido(cliente: Cliente)
  +agregarProducto(producto: Producto): void
  +calcularTotal(): double
  +mostrarResumen(): void
}

abstract class Producto {
  -nombre: String
  -precio: double
  --
  +Producto(nombre: String, precio: double)
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoDigital {
  -tamanoDescarga: String
  --
  +ProductoDigital(nombre: String, precio: double, tamanoDescarga: String)
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +calcularPrecioFinal(): double
  +toString(): String
}

Pedido *-- Cliente
Pedido o-- Producto
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml